default/objects/NVMConnect__Aggregation__c/NVMConnect__Aggregation__c.object-meta.xml
<CustomObject>
    <description>Used for grouping Dial Lists to feed another Dial List</description>
    <label>Aggregation</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aggregations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>