default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Active__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>