default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Blended_List__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Blended_List__c</fullName>
    <description>The list which is the destination for the combined work</description>
    <label>Blended List</label>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipLabel>Aggregations</relationshipLabel>
    <relationshipName>Aggregations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>