default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Blended_List_Active__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Blended_List_Active__c</fullName>
    <formula>NVMConnect__Blended_List__r.NVMConnect__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended List Active</label>
    <type>Checkbox</type>
</CustomField>