default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Calls_queued__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Calls_queued__c</fullName>
    <formula>NVMConnect__Feeder_List__r.NVMConnect__OutstandingCalls__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calls available to fetch from the feeder list</inlineHelpText>
    <label>Calls queued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>