default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Feeder_List__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Feeder_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Feeder List</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Feeder list must be active and cannot be this list.</errorMessage>
        <filterItems>
            <field>NVMConnect__DialList__c.NVMConnect__Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>NVMConnect__DialList__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.NVMConnect__Blended_List__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipLabel>Lists fed from this List</relationshipLabel>
    <relationshipName>Feeder_List</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>