default/objects/NVMConnect__Aggregation__c/fields/NVMConnect__Weighting__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Weighting__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Relative weight compared to other lists</inlineHelpText>
    <label>Weighting</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>